--- a/DEXS.IO.CSV.csproj
+++ b/DEXS.IO.CSV.csproj
@@ -70,4 +70,16 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+   <PropertyGroup>
+        <NugetOutputDirectory>artifacts</NugetOutputDirectory>
+    </PropertyGroup>
+
+  <Import Project="$(MSBuildProjectDirectory)\.build\MSBuild.Community.Tasks.targets"/>
+  <Target Name="AfterBuild" Condition=" '$(Configuration)' == 'Release'">
+	<!-- Only download a new copy of nuget.exe if we don't have a copy available -->
+	<WebDownload Condition="!Exists('nuget.exe')" Filename="nuget.exe" FileUri="https://dist.nuget.org/win-x86-commandline/latest/nuget.exe" />
+	<MakeDir Condition="!Exists($(NugetOutputDirectory))" Directories="$(NugetOutputDirectory)"/>
+	<Exec Command="nuget pack DEXS.IO.CSV.csproj -Prop Configuration=Release -OutputDirectory $(NugetOutputDirectory)" ></Exec>
+  </Target>
+
 </Project>
