--- a/DEXS.IO.CSV.nuspec
+++ b/DEXS.IO.CSV.nuspec
@@ -8,7 +8,7 @@
     <owners>$author$</owners>
     <licenseUrl>https://www.dexs.ca/licence</licenseUrl>
     <projectUrl>https://github.com/DEXSinc/dexs-io-csv/</projectUrl>
-    <iconUrl>https://www.dexs.ca/project.ico</iconUrl>
+    <iconUrl>http://aa164a04d71748b69e19-156c2587edac284f25142c13aa308713.r11.cf1.rackcdn.com/Favicon2.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes>none</releaseNotes>
